--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "A simple weather application for course of web-development at ITMO University.",
   "main": "index.js",
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "nedb": "^1.8.0",
+    "node-fetch": "^2.6.1",
+    "rand-token": "^1.0.1"
   },
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "Igor Ilyin (CptBronzebeard)",
   "license": "ISC"
 }
